@startuml
interface ConsoleService {
    +getAllConsoles(): List<ConsoleResponseModel>
}

class ConsoleServiceImpl {
    +getAllConsoles(): List<ConsoleResponseModel>
    -consoleRepository: ConsoleRepository
    -consoleResponseMapper: ConsoleResponseMapper
}

class ConsoleRepository {
    +findAll(): List<Console>
}

class ConsoleController {
    +getAllConsoles(): ResponseEntity<List<ConsoleResponseModel>>
}

class Console {
    -consoleId: String
    -consoleName: String
    -releaseDate: LocalDate
    -price: Double
    -quantityInStock: int
    -company: String
}

class ConsoleResponseModel {
    +consoleId: String
    +consoleName: String
    +releaseDate: LocalDate
    +price: double
    +quantityInStock: int
    +company: String
}

class ConsoleResponseMapper {
    +entityListToResponseModelList(consoleList: List<Console>): List<ConsoleResponseModel>
}

ConsoleController --> ConsoleService : calls
ConsoleService <|.. ConsoleServiceImpl : implements
ConsoleServiceImpl --> ConsoleRepository : calls
ConsoleServiceImpl --> ConsoleResponseMapper : maps
ConsoleRepository --> Console : operates on
@enduml
